Executando projeto com Docker/Linux e ajuste no cron

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,19 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
       - "${DB_PORT}:5432"
+
+  node-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: desafio-npl-node-app
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+    environment:
+      DB_HOST: "postgres"
+      DB_PORT: "${DB_PORT}"
+      DB_NAME: "${DB_NAME}"
+      DB_USERNAME: "${DB_USERNAME}"
+      DB_PASSWORD: "${DB_PASSWORD}"
