--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME=user
-DB_PASSWORD=pass
-DB_NAME=db
+DB_USERNAME=desafio
+DB_PASSWORD=npl
+DB_NAME=desafioNpl
 NODE_ENV=development
 APP_PORT=3000
