--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio-npl",
+  "name": "crawler-challenge",
   "version": "0.0.1",
   "description": "desafio tecnico para dev ts na nplabs",
   "author": "Lucas Miiller",
